--- a/creNginxPhp/Dockerfile
+++ b/creNginxPhp/Dockerfile
@@ -6,6 +6,7 @@
 
 # Pull base image.
 FROM tamboraorg/crenginx:2010.0
+MAINTAINER Michael Kahle <michael.kahle@yahoo.de>
 
 # version: yyyy.n for stable versions / 0.yyyy for development
 ENV CRE_VERSION 0.2010 
