--- a/creProxy/Dockerfile
+++ b/creProxy/Dockerfile
@@ -5,6 +5,7 @@
 # (adapted from https://github.com/jwilder/nginx-proxy )
 
 FROM tamboraorg/crenginx:2010.0
+MAINTAINER Michael Kahle <michael.kahle@yahoo.de>
 
 # version: yyyy.n for stable versions / 0.yyyy for development
 ENV CRE_VERSION 0.2010  
