--- a/creUbuntu/Dockerfile
+++ b/creUbuntu/Dockerfile
@@ -6,6 +6,7 @@
 
 # Pull base image.
 FROM ubuntu:16.04
+MAINTAINER Michael Kahle <michael.kahle@yahoo.de>
 
 # version: yyyy.n for stable versions / 0.yyyy for development
 ENV CRE_VERSION 0.2010 
