Consistent renaming of files

--- a/crePhp/Dockerfile
+++ b/crePhp/Dockerfile
@@ -87,5 +87,5 @@ WORKDIR "/cre/www"
 
 # Define default command.
 #CMD /cre/php-fpm.sh
-ENTRYPOINT ["/cre/nginx-entrypoint.sh"]
-CMD ["shoreman", "/cre/nginx-procfile"]
+ENTRYPOINT ["/cre/php-entrypoint.sh"]
+CMD ["shoreman", "/cre/php-procfile"]
