--- a/creMysql/Dockerfile
+++ b/creMysql/Dockerfile
@@ -7,7 +7,7 @@ ENV INITRD No
 #ENV LANG en_US.UTF-8
 ENV MYSQL_VERSION 5.7
 
-RUN echo "deb http://cn.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse" >> /etc/apt/sources.list
+#RUN echo "deb http://cn.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse" >> /etc/apt/sources.list
 
 RUN echo "mysql-server mysql-server/root_password password root" | debconf-set-selections
 RUN echo "mysql-server mysql-server/root_password_again password root" | debconf-set-selections
