Add alternate names

--- a/creFtp/cre/openssl.ftp.cfg
+++ b/creFtp/cre/openssl.ftp.cfg
@@ -73,4 +73,4 @@ nsComment           = "OpenSSL Generated Certificate"
 # extendedKeyUsage  = serverAuth, clientAuth
 
 #[ alternate_names ]
-
+DNS.1 = 176.9.19.24]
