Remove comment on Alternate names

--- a/creFtp/cre/openssl.ftp.cfg
+++ b/creFtp/cre/openssl.ftp.cfg
@@ -72,5 +72,8 @@ nsComment           = "OpenSSL Generated Certificate"
 #   In either case, you probably only need serverAuth.
 # extendedKeyUsage  = serverAuth, clientAuth
 
-#[ alternate_names ]
-DNS.1 = 176.9.19.24]
+[ alternate_names ]
+DNS.1 = localhost
+DNS.2 = 127.0.0.1
+DNS.3 = 176.9.19.24
+DNS.4 = ::1
