--- a/creUbuntu/Dockerfile
+++ b/creUbuntu/Dockerfile
@@ -12,6 +12,7 @@ MAINTAINER Michael Kahle <michael.kahle@yahoo.de>
 ENV CRE_VERSION 0.2010 
 ENV UBUNTU_VERSION 16.04
 ENV DOCKER_GEN_VERSION 0.7.4
+ENV DOCKER_HOST unix:///tmp/docker.sock
 
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US.UTF-8
