--- a/creFtp/cre/vsftpd.conf
+++ b/creFtp/cre/vsftpd.conf
@@ -2,6 +2,7 @@ listen=YES
 anonymous_enable=NO
 local_enable=YES
 write_enable=YES
+chroot_local_user=YES
 anon_upload_enable=NO
 anon_mkdir_write_enable=NO
 dirmessage_enable=YES
@@ -25,6 +26,9 @@ ssl_tlsv3=NO
 require_ssl_reuse=NO
 ssl_ciphers=HIGH
 
+userlist_enable=YES
+userlist_file=/cre/ftp.users
+userlist_deny=NO
 
 max_per_ip=100 
 max_clients=100
