--- a/creFtp/cre/vsftpd.conf
+++ b/creFtp/cre/vsftpd.conf
@@ -3,42 +3,51 @@ anonymous_enable=NO
 local_enable=YES
 write_enable=YES
 chroot_local_user=YES
-anon_upload_enable=NO
-anon_mkdir_write_enable=NO
-dirmessage_enable=YES
-use_localtime=YES
-xferlog_enable=YES
-connect_from_port_20=YES
-secure_chroot_dir=/var/run/vsftpd/empty
+#anon_upload_enable=NO
+#anon_mkdir_write_enable=NO
+#dirmessage_enable=YES
+#use_localtime=YES
+#xferlog_enable=YES
+#connect_from_port_20=YES
+#secure_chroot_dir=/var/run/vsftpd/empty
 pam_service_name=vsftpd
-rsa_cert_file=/etc/ssl/private/vsftpd.combine.pem
+#rsa_cert_file=/etc/ssl/private/vsftpd.combine.pem
 
-#rsa_cert_file=/etc/ssl/private/vsftpd.pem
-#rsa_private_key_file=/etc/ssl/private/vsftpd.key
+##rsa_cert_file=/etc/ssl/private/vsftpd.pem
+##rsa_private_key_file=/etc/ssl/private/vsftpd.key
 
-ssl_enable=YES
-allow_anon_ssl=NO
-force_local_data_ssl=YES
-force_local_logins_ssl=YES
-ssl_tlsv1=YES
-ssl_tlsv2=NO
-ssl_tlsv3=NO
-require_ssl_reuse=NO
-ssl_ciphers=HIGH
+#ssl_enable=YES
+#allow_anon_ssl=NO
+#force_local_data_ssl=YES
+#force_local_logins_ssl=YES
+#ssl_tlsv1=YES
+#ssl_tlsv2=NO
+#ssl_tlsv3=NO
+#require_ssl_reuse=NO
+#ssl_ciphers=HIGH
 
-userlist_enable=YES
-userlist_file=/cre/ftp.users
-userlist_deny=NO
+guest_username=vsftpd
+guest_enable=YES
+nopriv_user=vsftpd
+virtual_use_local_privs=YES
 
-max_per_ip=100 
-max_clients=100
+user_config_dir=/etc/vsftpd_user_conf
 
-pasv_min_port=12020
-pasv_max_port=12025
+#userlist_enable=YES
+#userlist_file=/cre/ftp.users
+#userlist_deny=NO
 
-file_open_mode=0666
-local_umask=000
+#max_per_ip=100 
+#max_clients=100
+
+#pasv_min_port=12020
+#pasv_max_port=12025
+
+#file_open_mode=0666
+local_umask=022
+local_root=/cre/ftp/share/empty
 
 allow_writeable_chroot=YES
-vsftpd_log_file=/cre/ftp/vsftpd.log
-background=NO
+hide_ids=YES
+#vsftpd_log_file=/cre/ftp/vsftpd.log
+#background=NO
