Reorganize Postgres handling

--- a/crePostgres/Dockerfile
+++ b/crePostgres/Dockerfile
@@ -6,7 +6,11 @@ MAINTAINER Michael Kahle <michael.kahle@yahoo.de>
 ENV DEBIAN_FRONTEND noninteractive
 ENV INITRD No
 #ENV LANG en_US.UTF-8
-ENV PG_VERSION 9.5
+ENV POSTGRES_VERSION 9.5
+ENV RANDOM_DOCKER_DEFAULT {$(pwgen -c -n -1 14)}
+
+
+RUN ENV RANDOM_DOCKER_RUN=$(pwgen -c -n -1 14)
 
 #RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys B97B0AFCAA1A47F044F244A07FCC7D46ACCC4CF8 && \
 #    echo 'deb http://apt.postgresql.org/pub/repos/apt/ trusty-pgdg main' \
@@ -16,19 +20,19 @@ RUN add-apt-repository ppa:ubuntugis/ppa
 
 RUN apt-get update && \
     apt-get install -y -q --no-install-recommends \
-      postgresql-$PG_VERSION postgresql-client-$PG_VERSION postgresql-contrib-$PG_VERSION && \
+      postgresql-$POSTGRES_VERSION postgresql-client-$POSTGRES_VERSION postgresql-contrib-$POSTGRES_VERSION && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
-    echo "host all  all    0.0.0.0/0  md5" >> /etc/postgresql/$PG_VERSION/main/pg_hba.conf && \
-    echo "listen_addresses='*'" >> /etc/postgresql/$PG_VERSION/main/postgresql.conf  && \
-    rm -rf /var/lib/postgresql/$PG_VERSION/main && \
+    echo "host all  all    0.0.0.0/0  md5" >> /etc/postgresql/$POSTGRES_VERSION/main/pg_hba.conf && \
+    echo "listen_addresses='*'" >> /etc/postgresql/$POSTGRES_VERSION/main/postgresql.conf  && \
+    rm -rf /var/lib/postgresql/$POSTGRES_VERSION/main && \
     update-rc.d -f postgresql disable
 
 #ADD run /usr/local/bin/run
 #RUN chmod +x /usr/local/bin/run
 
 RUN mkdir -p /cre && touch /cre/versions.txt && \ 
-    echo "$(date +'%F %R') \t crePostgres \t $(/usr/lib/postgresql/${PG_VERSION}/bin/postgres --version)" >> /cre/versions.txt && \ 
+    echo "$(date +'%F %R') \t crePostgres \t $(/usr/lib/postgresql/${POSTGRES_VERSION}/bin/postgres --version)" >> /cre/versions.txt && \ 
     echo "$(date +'%F %R') \t  psql \t $(psql --version)" >> /cre/versions.txt 
 
 COPY cre /cre
@@ -39,5 +43,7 @@ VOLUME ["/var/lib/postgresql"]
 EXPOSE 5432
 
 #USER postgres
+
+ENTRYPOINT ["/cre/postgres-entrypoint.sh"]
 
 CMD ["/cre/run.sh"]
