checksum file lost?

--- a/crePhpSurvey/Dockerfile
+++ b/crePhpSurvey/Dockerfile
@@ -19,10 +19,10 @@ RUN mkdir -p /cre && touch /cre/versions.txt && \
 
 COPY cre /cre
 
-RUN echo "${LS_SHA256} limesurvey.tar.gz" > survey256.txt 
-RUN curl -o limesurvey.tar.gz -L https://www.limesurvey.org/stable-release?download=${LS_DOWNLOAD}targz \
+RUN echo "${LS_SHA256} limesurvey.tar.gz" > survey256.txt \
+        && curl -o limesurvey.tar.gz -L https://www.limesurvey.org/stable-release?download=${LS_DOWNLOAD}targz \
 #        && sha256sum --status --strict -c survey256.txt && touch ok.txt \
-        && sha256sum ./limesurvey.tar.gz > cs_ls.txt \
+        && sha256sum ./limesurvey.tar.gz > /cre/cs_ls.txt \     
 	&& mkdir limetmp \
 	&& tar -zxf limesurvey.tar.gz -C limetmp \
 	&& rm limesurvey.tar.gz \
@@ -36,7 +36,7 @@ RUN curl -o limesurvey.tar.gz -L https://www.limesurvey.org/stable-release?downl
 #	&& chown -R www-data:www-data /uploadstruct \
 #       && chown www-data:www-data /var/lib/php5
 
-COPY cs_ls.txt /cre/cs_ls.txt
+#COPY ./cs_ls.txt /cre/cs_ls.txt
 
 VOLUME ["/cre/www/survey"]
 #VOLUME ["/usr/share/phpmyadmin"]
