Try to add ssl for ftp

--- a/creFtp/cre/vsftpd.conf
+++ b/creFtp/cre/vsftpd.conf
@@ -9,22 +9,24 @@ chroot_local_user=YES
 #use_localtime=YES
 #xferlog_enable=YES
 #connect_from_port_20=YES
-#secure_chroot_dir=/var/run/vsftpd/empty
+#secure_chroot_dir=/cre/ftp/share/empty
 pam_service_name=vsftpd
-#rsa_cert_file=/etc/ssl/private/vsftpd.combine.pem
+### TRY SSL
+rsa_cert_file=/etc/ssl/private/vsftpd.combine.pem
 
 ##rsa_cert_file=/etc/ssl/private/vsftpd.pem
 ##rsa_private_key_file=/etc/ssl/private/vsftpd.key
 
-#ssl_enable=YES
-#allow_anon_ssl=NO
-#force_local_data_ssl=YES
-#force_local_logins_ssl=YES
-#ssl_tlsv1=YES
-#ssl_tlsv2=NO
-#ssl_tlsv3=NO
-#require_ssl_reuse=NO
-#ssl_ciphers=HIGH
+ssl_enable=YES
+allow_anon_ssl=NO
+force_local_data_ssl=YES
+force_local_logins_ssl=YES
+ssl_tlsv1=YES
+ssl_tlsv2=NO
+ssl_tlsv3=NO
+require_ssl_reuse=NO
+ssl_ciphers=HIGH
+### TRY SSL END
 
 guest_username=vsftpd
 guest_enable=YES
