php survey misses appliction directory

--- a/crePhpSurvey/Dockerfile
+++ b/crePhpSurvey/Dockerfile
@@ -22,7 +22,7 @@ COPY cre /cre
 RUN echo "${LS_SHA256} /cre/limesurvey.tar.gz" > /cre/survey256.txt \
         && curl -o /cre/limesurvey.tar.gz -L https://www.limesurvey.org/stable-release?download=${LS_DOWNLOAD}targz \
         && sha256sum /cre/limesurvey.tar.gz > /cre/cs_ls.txt \  
-        && sha256sum --status --strict -c /cre/survey256.txt && touch ok.txt \   
+#        && sha256sum --status --strict -c /cre/survey256.txt && touch /cre/ok.txt \   
 	&& mkdir limetmp \
 	&& tar -zxf /cre/limesurvey.tar.gz -C limetmp \
 	&& rm /cre/limesurvey.tar.gz \
