Move files in one step

--- a/crePhpYii/Dockerfile
+++ b/crePhpYii/Dockerfile
@@ -12,13 +12,8 @@ RUN mkdir -p /cre && touch /cre/versions.txt && \
 
 COPY cre /cre
 
-#RUN mkdir /cre/yiitmp 
-#RUN  cd /cre/yiitmp 
-RUN  composer create-project --prefer-dist yiisoft/yii2-app-basic /cre/yiitmp
-#RUN  cd .. 
-#RUN  mv -Rf ./yiitmp/*  /cre/www/yii
-RUN YII_TAG=$(ls /cre/yiitmp) 
-RUN mv /cre/yiitmp/$YII_TAG /cre/www/yii 
+RUN composer create-project --prefer-dist yiisoft/yii2-app-basic /cre/yiitmp && \
+ YII_TAG=$(ls /cre/yiitmp) && mv /cre/yiitmp/$YII_TAG /cre/www/yii 
 # rm /cre/yiitmp
 
 #config/web.php
