keep tar file for debugging

--- a/crePhpSurvey/Dockerfile
+++ b/crePhpSurvey/Dockerfile
@@ -25,7 +25,7 @@ RUN echo "${LS_SHA256} /cre/limesurvey.tar.gz" > /cre/survey256.txt \
 #        && sha256sum --status --strict -c /cre/survey256.txt && touch /cre/ok.txt \   
 	&& mkdir /cre/limetmp \
 	&& tar -zxf /cre/limesurvey.tar.gz -C /cre/limetmp \
-	&& rm /cre/limesurvey.tar.gz \
+#	&& rm /cre/limesurvey.tar.gz \
 	&& LIME_TAG=$(ls /cre/limetmp) \
 	&& mv /cre/limetmp/$LIME_TAG /cre/www/survey \
 	&& rm -rf /cre/limetmp \
