--- a/crePhpYii/Dockerfile
+++ b/crePhpYii/Dockerfile
@@ -13,8 +13,9 @@ RUN mkdir -p /cre && touch /cre/versions.txt && \
 COPY cre /cre
 
 RUN composer create-project --prefer-dist yiisoft/yii2-app-basic /cre/yiitmp && \
- YII_TAG=$(ls -d /cre/yiitmp/*) && mv /cre/yiitmp/$YII_TAG /cre/www/yii 
+ YII_TAG=$(ls -d /cre/yiitmp/*) && mv $YII_TAG /cre/www/yii 
 # rm /cre/yiitmp
+## if absolute path with wildcard not working try: ls /cre/yiitmp && cd /cre/yiitmp && mv
 
 #config/web.php
 
