--- a/crePhpYii/Dockerfile
+++ b/crePhpYii/Dockerfile
@@ -14,7 +14,7 @@ COPY cre /cre
 
 RUN composer create-project --prefer-dist yiisoft/yii2-app-basic /cre/yiitmp && \
 # YII_TAG=$(ls -d /cre/yiitmp/*) && mv $YII_TAG /cre/www/yii 
- YII_TAG=$(ls /cre/yiitmp) && cd /cre/yiitmp && mv $YII_TAG /cre/www/yii && cd /cre
+ YII_TAG=$(ls /cre/yiitmp) && cd /cre/yiitmp && mv -t /cre/www/yii $YII_TAG && cd /cre
 # rm /cre/yiitmp
 
 
