Use rsync also for survey

--- a/crePhpSurvey/Dockerfile
+++ b/crePhpSurvey/Dockerfile
@@ -23,22 +23,20 @@ RUN echo "${LS_SHA256} /cre/limesurvey.tar.gz" > /cre/survey256.txt \
         && curl -o /cre/limesurvey.tar.gz -L https://www.limesurvey.org/stable-release?download=${LS_DOWNLOAD}targz \
         && sha256sum /cre/limesurvey.tar.gz > /cre/cs_ls.txt \  
 #        && sha256sum --status --strict -c /cre/survey256.txt && touch /cre/ok.txt \   
-	&& mkdir /cre/limetmp \
-	&& tar -zxf /cre/limesurvey.tar.gz -C /cre/limetmp \
-#	&& rm /cre/limesurvey.tar.gz \
+	&& mkdir -p /cre/tmp/survey \
+	&& tar -zxf /cre/limesurvey.tar.gz -C /cre/tmp/survey \
+	&& rm /cre/limesurvey.tar.gz \
 ##	&& LIME_TAG=$(ls -d /cre/limetmp/limesurvey/*) \
 ##	&& mv $LIME_TAG /cre/www/survey \
-   && LIME_TAG=$(ls /cre/limetmp/limesurvey) && cd /cre/limetmp/limesurvey && mv $LIME_TAG /cre/www/survey \
-
-#	&& rm -rf /cre/limetmp \
-	&& chown -R www-data:www-data /cre/www/survey 
-
+#   && LIME_TAG=$(ls /cre/limetmp/limesurvey) && cd /cre/limetmp/limesurvey && mv $LIME_TAG /cre/www/survey && cd /cre \
+#	&& rm -rf /cre/tmp/survey \
+#	&& chown -R www-data:www-data /cre/www/survey 
 #	&& mkdir -p /uploadstruct \
 #	&& cp -r /cre/www/survey/upload/* /uploadstruct \
 #	&& chown -R www-data:www-data /uploadstruct \
 #       && chown www-data:www-data /var/lib/php5
 
-VOLUME ["/cre/www/survey"]
+#VOLUME ["/cre/www/survey"]
 WORKDIR "/cre/www"
 
 ENTRYPOINT ["/cre/survey-entrypoint.sh"]
